backend/server.log
[INFO] 06:01:47 ts-node-dev ver. 2.0.0 (using ts-node ver. 10.9.2, typescript ver. 5.9.3)
Compilation error in c:\Users\User\.gemini\antigravity\scratch\bikasafe\backend\src\routes\loan.ts
[ERROR] 06:01:59 тип Unable to compile TypeScript:
src/routes/loan.ts(54,22): error TS2322: Type 'string | string[]' is not assignable to type 'string | StringFilter<"Loan"> | undefined'.
  Type 'string[]' is not assignable to type 'string | StringFilter<"Loan"> | undefined'.
src/routes/loan.ts(60,22): error TS2322: Type 'string | string[]' is not assignable to type 'string | undefined'.
  Type 'string[]' is not assignable to type 'string'.

^C